--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-aiohttp==3.8.1
-numpy==1.21.2
-pandas==1.3.3
-python-telegram-bot==13.7
-TA==0.10.2
-requests==2.26.0
+aiohttp
+numpy
+pandas
+python-telegram-bot
+TA
+requests
